--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
   href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <!-- Game Logic -->
 	<script type="text/javascript" src="assets/javascript/script.js"></script>
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
 	<div class="container">
 		<div class="row">
 			<div class="jumbotron text-center">
-				<h1>Trivia Game</h1>
+				<img id="logo" src="https://cdn.worldvectorlogo.com/logos/who-wants-to-be-a-millionaire.svg">
 			</div>
 		</div>
 		<div class="row">
@@ -28,11 +30,11 @@
 			<div class="col-md-12 text-center info" id="question"></div>
 		</div>
 		<div class="row">
-			<div class="col-md-12 text-center info" id="choices"></div>
+			<divs class="col-md-12 text-center info" id="choices"></div>
 		</div>
 		<div class="row">
 			<div class="col-md-12 text-center info" id="response"></div>
-		</div>
+			</div>
 
 </body>
 </html>
